work in progress

--- a/frontend/src/app/modules/main/calendar/calendar-grid-row-cell/expense-item/expense-item.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid-row-cell/expense-item/expense-item.component.html
@@ -1,5 +1,5 @@
-<div class="expense-overlay" style="background-color: orange;"></div>
-<div class="expense-category" style="background-color: orange;"></div>
+<div class="expense-overlay" [style.background-color]="expense.category?.color ?? '#333333'"></div>
+<div class="expense-category" [style.background-color]="expense.category?.color ?? '#333333'"></div>
 <div class="expense-label ml-1 text-truncate">
     {{ expense.label }}
 </div>
