expense form updates

--- a/frontend/src/app/modules/main/calendar/calendar-grid-row-cell/calendar-grid-row-cell.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid-row-cell/calendar-grid-row-cell.component.html
@@ -13,7 +13,7 @@
     <div class="expense-list d-flex flex-column mt-1" [ngStyle]="{'height.px': expenseListHeight}">
         <app-calendar-expense-item
                 *ngFor="let expense of getVisibleExpenses()"
-                (click)="editExpense(expense)"
+                (click)="editExpense(expense.id)"
                 [expense]="expense">
         </app-calendar-expense-item>
         <a href="#" (click)="$event.preventDefault(); openInvisibleExpenses()" *ngIf="countInvisibleExpenses()" class="other-label px-1">
