--- a/frontend/src/app/modules/main/main.component.html
+++ b/frontend/src/app/modules/main/main.component.html
@@ -2,18 +2,18 @@
 
   <nb-layout-header fixed>
     <app-header
-            [calendar]="calendar"
-            [(selectedDate)]="selectedDate">
+            [calendar]="mainService.calendar"
+            [(selectedDate)]="mainService.selectedDate">
     </app-header>
   </nb-layout-header>
 
   <nb-layout-column class="p-0 p-sm-3" [nbSpinner]="isBusy">
     <nb-card class="h-100 mb-0">
       <app-calendar
-              [calendar]="calendar"
-              [expenses]="expenses"
-              [visibleDate]="selectedDate"
-              (dateRangeChange)="dateRange = $event; fetchExpenses()">
+              [calendar]="mainService.calendar"
+              [expenses]="mainService.expenses"
+              [visibleDate]="mainService.selectedDate"
+              (dateRangeChange)="mainService.dateRange = $event; mainService.fetchExpenses()">
       </app-calendar>
     </nb-card>
   </nb-layout-column>
@@ -22,8 +22,8 @@
     <div class="d-flex flex-column justify-content-between h-100">
       <app-sidebar-calendar-list
               [(calendars)]="mainService.user.calendars"
-              [calendar]="calendar"
-              (calendarChange)="calendar = $event; fetchExpenses()">
+              [calendar]="mainService.calendar"
+              (calendarChange)="mainService.calendar = $event; mainService.fetchExpenses()">
       </app-sidebar-calendar-list>
       <app-profile
               [(user)]="mainService.user">
