--- a/frontend/src/app/modules/main/dialogs/calendars-dialog/calendar-edit/calendar-edit.component.html
+++ b/frontend/src/app/modules/main/dialogs/calendars-dialog/calendar-edit/calendar-edit.component.html
@@ -1,5 +1,5 @@
 <form #calendarForm=ngForm (submit)="save.emit(this.calendar)" class="dialog-responsive" autocomplete="off">
-    <nb-card size="small">
+    <nb-card size="small" class="border-0">
         <nb-card-header i18n>
             <button nbButton status="primary" ghost (click)="back.emit(true)">
                 <nb-icon icon="arrow-back-outline"></nb-icon>
