--- a/frontend/src/app/modules/main/dialogs/categories-dialog/category-edit/category-edit.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/category-edit/category-edit.component.html
@@ -1,5 +1,5 @@
 <form #categoryForm="ngForm" (submit)="save.emit(this.category)" class="dialog-responsive" autocomplete="off">
-    <nb-card size="medium" style="width: 335px;">
+    <nb-card size="medium" class="border-0" style="width: 335px;">
         <nb-card-header i18n>
             <button nbButton status="primary" ghost (click)="back.emit(true)">
                 <nb-icon icon="arrow-back-outline"></nb-icon>
