--- a/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.scss
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.scss
@@ -1,8 +1,4 @@
-@import '../../../../../../themes';
-
-nb-list-item {
-  cursor: pointer;
-}
+@import '../../../../../../theme';
 
 .category-color {
   width: 24px;
