--- a/frontend/src/app/modules/main/dialogs/profile-dialog/profile-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/profile-dialog/profile-dialog.component.html
@@ -1,5 +1,5 @@
 <form #userForm="ngForm" (ngSubmit)="onSubmit()" autocomplete="off">
-    <nb-card [nbSpinner]="isBusy">
+    <nb-card [nbSpinner]="isBusy" class="border-0">
         <nb-card-body>
             <div class="d-flex justify-content-center">
                 <nb-user
