--- a/frontend/src/app/modules/main/calendar/calendar-grid-row-cell/expense-item/expense-item.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid-row-cell/expense-item/expense-item.component.html
@@ -1,8 +1,8 @@
-<div class="expense-overlay" [style.background-color]="expense.category?.color ?? '#333333'"></div>
-<div class="expense-category" [style.background-color]="expense.category?.color ?? '#333333'"></div>
+<div class="expense-overlay" [style.background-color]="expense.category?.color ?? UNCATEGORIZED_COLOR"></div>
+<div class="expense-category" [style.background-color]="expense.category?.color ?? UNCATEGORIZED_COLOR"></div>
 <div class="expense-label ml-1 text-truncate">
     {{ expense.label }}
 </div>
 <div class="expense-amount">
-    <small>{{ expense.amount | currency:' ' }}</small>
+    <small>{{ expense.amount | shortNumber:2 }}</small>
 </div>
