--- a/frontend/src/app/modules/main/dialogs/expense-dialog/expense-dialog.component.scss
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/expense-dialog.component.scss
@@ -9,6 +9,28 @@ nb-list-item {
     }
 }
 
-nb-list-item.actionable {
-    cursor: pointer;
+.expense-header.confirmed {
+    color: hsla(0, 0%, 100%, .8) !important;
+
+    button.toggle-sign {
+        background-color: rgba(0, 0, 0, .05);
+    }
+
+    input.t-input {
+        color: hsla(0, 0%, 100%, .8) !important;
+        border-color: hsla(0, 0%, 100%, .4) !important;
+    }
+
+    input.t-input::placeholder {
+        color: hsla(0, 0%, 100%, .4) !important;
+    }
+}
+
+button.toggle-sign {
+    padding: 0 12px 0 23px !important;
+    height: 30px;
+    margin-right: 10px;
+    color: #fff !important;
+    border-radius: 0 100px 100px 0;
+    border: 0;
 }
