--- a/frontend/src/styles/helpers.scss
+++ b/frontend/src/styles/helpers.scss
@@ -1,12 +1,12 @@
 @use '@nebular/theme/styles/globals' as *;
 
-.h-100 {
-  height: 100% !important;
-}
-
-.w-100 {
-  width: 100% !important;
-}
+//.h-100 {
+//  height: 100% !important;
+//}
+//
+//.w-100 {
+//  width: 100% !important;
+//}
 
 .max-h-100 {
   max-height: 100% !important;
