migration to mysql & expense edit UI fixes

--- a/frontend/src/app/modules/main/calendar/calendar-grid-row-cell/expense-item/expense-item.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid-row-cell/expense-item/expense-item.component.html
@@ -4,5 +4,5 @@
     {{ expense.label }}
 </div>
 <div class="expense-amount">
-    <small>{{ expense.amount | shortNumber:2 }}</small>
+    <small class="me-2">{{ expense.amount | shortNumber }}</small>
 </div>
