--- a/frontend/src/app/modules/main/dialogs/calendars-dialog/calendars-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/calendars-dialog/calendars-dialog.component.html
@@ -1,4 +1,4 @@
-<div style="min-width: 290px" [nbSpinner]="isBusy">
+<div [nbSpinner]="isBusy">
     <app-calendar-list
         *ngIf="!editableCalendar"
         [selectedCalendar]="this.selectedCalendar"
