--- a/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.html
@@ -1,4 +1,4 @@
-<nb-card size="medium" class="border-0" style="width: 335px;">
+<nb-card class="dialog" size="large">
     <nb-card-header>
         <button nbButton status="primary" ghost (click)="back.emit(true)">
             <nb-icon icon="arrow-back-outline"></nb-icon>
