--- a/frontend/src/app/modules/main/dialogs/datepicker-dialog/datepicker-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/datepicker-dialog/datepicker-dialog.component.html
@@ -1,4 +1,4 @@
-<nb-card size="medium" class="border-0">
+<nb-card class="dialog">
     <nb-card-header i18n>
         <button nbButton status="primary" ghost (click)="dialogRef.close()">
             <nb-icon icon="arrow-back-outline"></nb-icon>
