--- a/frontend/src/app/modules/main/dialogs/calendars-dialog/calendar-list/calendar-list.component.html
+++ b/frontend/src/app/modules/main/dialogs/calendars-dialog/calendar-list/calendar-list.component.html
@@ -1,4 +1,4 @@
-<nb-card size="medium" class="border-0">
+<nb-card class="dialog">
     <nb-card-header>
         <button nbButton status="primary" ghost (click)="back.emit(true)">
             <nb-icon icon="arrow-back-outline"></nb-icon>
