--- a/frontend/src/app/modules/main/dialogs/categories-dialog/categories-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/categories-dialog.component.html
@@ -1,4 +1,4 @@
-<div style="min-width: 290px" [nbSpinner]="isBusy">
+<div [nbSpinner]="isBusy">
     <app-category-list
             *ngIf="!editableCategory"
             [categories]="categories"
