--- a/frontend/src/app/modules/main/dialogs/statement-import-dialog/statement-import-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/statement-import-dialog/statement-import-dialog.component.html
@@ -1,5 +1,5 @@
 <form #importForm="ngForm" (ngSubmit)="onSubmit($event)">
-    <nb-card [nbSpinner]="isBusy" class="border-0">
+    <nb-card [nbSpinner]="isBusy" class="dialog">
         <nb-card-body>
             <div>
                 <input nbInput type="file" name="statements[]" multiple [fullWidth] required />
