--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -10,6 +10,7 @@ $nb-themes: nb-register-theme(
                     input-tiny-text-font-weight: 400,
                     input-small-text-font-weight: 400,
                     input-medium-text-font-weight: 400,
+                    card-header-text-font-weight: 400,
                 ),
                 expensave,
                 default
