--- a/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.html
@@ -19,6 +19,19 @@
             </nb-icon>
             <div class="text-truncate">{{ category.name }}</div>
         </nb-list-item>
+        <nb-list-item
+            *ngIf="showEmptyCategory"
+            class="actionable"
+            [class.active]="selectedCategory === undefined"
+            [style.background-color]="selectedCategory === undefined ? UNCATEGORIZED_COLOR : ''"
+            (click)="categoryClick.emit(null)">
+            <nb-icon
+                icon="radio-button-on"
+                class="flex-shrink-0 me-2"
+                [style.color]="selectedCategory === undefined ? '' : UNCATEGORIZED_COLOR">
+            </nb-icon>
+            <div class="text-truncate">Uncategorized</div>
+        </nb-list-item>
     </nb-list>
     <nb-card-footer class="text-right">
         <button nbButton status="primary" ghost (click)="newCategoryClick.emit(true)">
